--- a/progress-workout-b.html
+++ b/progress-workout-b.html
@@ -63,7 +63,7 @@
 
   <script>
     function backToSplash() {
-      window.location.href = 'splash.html';
+      window.location.href = 'index.html';
     }
 
     function loadData() {
