--- a/workout-a.html
+++ b/workout-a.html
@@ -194,7 +194,7 @@
     }
 
     function exitWithoutSaving() {
-      window.location.href = 'splash.html';
+      window.location.href = 'index.html';
     }
 
     function viewProgress() {
@@ -202,7 +202,7 @@
     }
 
     function backToSplash() {
-      window.location.href = 'splash.html';
+      window.location.href = 'index.html';
     }
   </script>
 </body>
