--- a/workout-b.html
+++ b/workout-b.html
@@ -201,7 +201,7 @@
     }
 
     function exitWithoutSaving() {
-      window.location.href = 'splash.html';
+      window.location.href = 'index.html';
     }
 
     function viewProgress() {
@@ -209,7 +209,7 @@
     }
 
     function backToSplash() {
-      window.location.href = 'splash.html';
+      window.location.href = 'index.html';
     }
   </script>
 </body>
