--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -15,11 +15,24 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      color: white;
+    }
+    .logo {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 1rem;
+      animation: swim-wave 3s ease-in-out infinite;
+      fill: white;
+      filter: drop-shadow(0 0 3px rgba(0,0,0,0.3));
+    }
+    @keyframes swim-wave {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px) rotate(5deg); }
     }
     h1 {
       font-size: 2rem;
-      color: white;
       margin-bottom: 2rem;
+      text-shadow: 0 2px 4px rgba(0,0,0,0.3);
     }
     .button {
       background: white;
@@ -41,7 +54,13 @@
   </style>
 </head>
 <body>
+  <!-- Animated Swimmer SVG -->
+  <svg class="logo" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+    <path d="M44 20c-2 0-4-1-5-3-1-1-2-3-2-5a5 5 0 1 1 10 0c0 2-1 4-3 5-1 1-1 3-1 3zm-3 18c-6 2-12 3-18 5-3 1-5 3-7 5-1 1 0 2 1 2 2 0 4-2 6-3 5-3 10-4 15-6 3-1 6-2 9-3 1 0 1-2-2-2z" />
+  </svg>
+
   <h1>Welcome to Swim Tracker</h1>
+
   <button class="button" onclick="location.href='workout-a.html'">Workout A (Pool)</button>
   <button class="button" onclick="location.href='workout-b.html'">Workout B (Distance)</button>
   <button class="button" onclick="location.href='progress-workout-a.html'">View Workout A Progress</button>
