--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swim Tracker Splash</title>
   <style>
     body {
@@ -16,6 +16,7 @@
       justify-content: center;
       min-height: 100vh;
       color: white;
+      text-align: center;
     }
     .logo {
       width: 80px;
@@ -33,8 +34,19 @@
     }
     h1 {
       font-size: 2rem;
-      margin-bottom: 2rem;
+      margin-bottom: 0.5rem;
       text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+    }
+    .ironman {
+      font-weight: bold;
+      color: red;
+      font-size: 1.5rem;
+      margin-bottom: 0.25rem;
+    }
+    .countdown, .week-display {
+      margin-bottom: 1rem;
+      font-size: 1rem;
+      color: #ffffff;
     }
     .button {
       background: white;
@@ -58,20 +70,40 @@
 <body>
   <!-- Nintendo-style Simple Swimmer SVG -->
   <svg class="logo" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-    <!-- Head -->
     <circle cx="20" cy="20" r="8" fill="white" />
-    <!-- Body -->
     <rect x="14" y="28" width="12" height="20" fill="white" rx="6" ry="6" />
-    <!-- Arm (animated) -->
     <rect id="arm" x="26" y="28" width="6" height="12" fill="white" rx="3" ry="3" />
   </svg>
 
+  <div class="ironman">IRONMAN Dubai 70.3 2026</div>
   <h1>Welcome to Swim Tracker</h1>
+  <div class="countdown" id="countdown"></div>
+  <div class="week-display" id="weekDisplay"></div>
 
   <button class="button" onclick="location.href='workout-a.html'">Workout A (Pool)</button>
   <button class="button" onclick="location.href='workout-b.html'">Workout B (Distance)</button>
   <button class="button" onclick="location.href='progress-workout-a.html'">View Workout A Progress</button>
   <button class="button" onclick="location.href='progress-workout-b.html'">View Workout B Progress</button>
+
+  <script>
+    function updateCountdown() {
+      const raceDate = new Date("March 14, 2026");
+      const now = new Date();
+      const diff = raceDate - now;
+      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+      document.getElementById("countdown").textContent = `Countdown: ${days} days until race day.`;
+    }
+
+    function updateWeekDisplay() {
+      const startDate = new Date("June 23, 2025");
+      const now = new Date();
+      const diff = now - startDate;
+      const weekNumber = Math.max(1, Math.floor(diff / (1000 * 60 * 60 * 24 * 7)) + 1);
+      document.getElementById("weekDisplay").textContent = `You are in week ${weekNumber} of your training plan.`;
+    }
+
+    updateCountdown();
+    updateWeekDisplay();
+  </script>
 </body>
 </html>
-
