--- a/index.html
+++ b/index.html
@@ -3,107 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Swim Tracker Splash</title>
+  <title>Swim Tracker</title>
   <style>
     body {
       margin: 0;
       padding: 2rem;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background: linear-gradient(to bottom right, #0077b6, #90e0ef);
+      color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      color: white;
       text-align: center;
     }
-    .logo {
-      width: 80px;
-      height: 80px;
-      margin-bottom: 1rem;
-      filter: drop-shadow(0 0 3px rgba(0,0,0,0.3));
-    }
-    #arm {
-      transform-origin: center bottom;
-      animation: arm-stroke 2s ease-in-out infinite;
-    }
-    @keyframes arm-stroke {
-      0%, 100% { transform: rotate(0deg); }
-      50% { transform: rotate(-30deg); }
-    }
     h1 {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    }
-    .ironman {
-      font-weight: bold;
-      color: red;
-      font-size: 1.5rem;
-      margin-bottom: 0.25rem;
-    }
-    .countdown, .week-display {
+      font-size: 2.5rem;
       margin-bottom: 1rem;
-      font-size: 1rem;
-      color: #ffffff;
     }
     .button {
+      font-size: 1.2rem;
+      margin: 0.5rem;
+      padding: 1rem 2rem;
       background: white;
       color: #0077b6;
       border: none;
       border-radius: 12px;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-      margin: 0.5rem;
-      width: 80%;
-      max-width: 300px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      transition: transform 0.2s ease;
       cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
-    .button:hover {
-      transform: translateY(-2px);
+    .countdown {
+      margin-top: 1rem;
+      font-size: 1.1rem;
     }
   </style>
 </head>
 <body>
-  <!-- Nintendo-style Simple Swimmer SVG -->
-  <svg class="logo" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-    <circle cx="20" cy="20" r="8" fill="white" />
-    <rect x="14" y="28" width="12" height="20" fill="white" rx="6" ry="6" />
-    <rect id="arm" x="26" y="28" width="6" height="12" fill="white" rx="3" ry="3" />
-  </svg>
+  <h1><span style="color: red; font-weight: bold;">Ironman Dubai 70.3 2026</span></h1>
+  <h2>Welcome to Swim Tracker</h2>
 
-  <div class="ironman">IRONMAN Dubai 70.3 2026</div>
-  <h1>Welcome to Swim Tracker</h1>
   <div class="countdown" id="countdown"></div>
-  <div class="week-display" id="weekDisplay"></div>
+  <div class="countdown" id="weekNumber"></div>
 
   <button class="button" onclick="location.href='workout-a.html'">Workout A (Pool)</button>
   <button class="button" onclick="location.href='workout-b.html'">Workout B (Distance)</button>
-  <button class="button" onclick="location.href='progress-workout-a.html'">View Workout A Progress</button>
-  <button class="button" onclick="location.href='progress-workout-b.html'">View Workout B Progress</button>
+  <button class="button" onclick="location.href='progress-workout-a.html'">Progress A</button>
+  <button class="button" onclick="location.href='progress-workout-b.html'">Progress B</button>
+  <button class="button" onclick="location.href='calendar.html'">Logged Workouts</button>
 
   <script>
     function updateCountdown() {
-      const raceDate = new Date("March 14, 2026");
       const now = new Date();
+      const raceDate = new Date('2026-03-14');
       const diff = raceDate - now;
       const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-      document.getElementById("countdown").textContent = `Countdown: ${days} days until race day.`;
-    }
+      document.getElementById('countdown').textContent = `${days} days until race day!`;
 
-    function updateWeekDisplay() {
-      const startDate = new Date("June 23, 2025");
-      const now = new Date();
-      const diff = now - startDate;
-      const weekNumber = Math.max(1, Math.floor(diff / (1000 * 60 * 60 * 24 * 7)) + 1);
-      document.getElementById("weekDisplay").textContent = `You are in week ${weekNumber} of your training plan.`;
+      const planStart = new Date('2025-06-23');
+      const msPerWeek = 1000 * 60 * 60 * 24 * 7;
+      const weekNumber = Math.max(1, Math.floor((now - planStart) / msPerWeek) + 1);
+      document.getElementById('weekNumber').textContent = `You are in week ${weekNumber} of your training plan.`;
     }
 
     updateCountdown();
-    updateWeekDisplay();
   </script>
 </body>
 </html>
