--- a/calendar.html
+++ b/calendar.html
@@ -8,226 +8,127 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       margin: 0;
-      padding: 1rem;
-      background-color: #f0f4f8;
-      color: #333;
+      padding: 2rem;
+      background: linear-gradient(to bottom right, #0077b6, #90e0ef);
+      color: white;
+      text-align: center;
     }
     h1 {
-      text-align: center;
-      color: #0077b6;
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
     }
     .calendar {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
       gap: 0.5rem;
-      margin-top: 1rem;
+      max-width: 420px;
+      margin: 0 auto 2rem;
     }
-    .day {
+    .calendar-day, .calendar-header {
       background: white;
-      border-radius: 8px;
-      padding: 0.5rem;
-      text-align: center;
-      cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      position: relative;
+      color: #0077b6;
+      border-radius: 10px;
+      padding: 0.75rem;
+      font-weight: bold;
     }
-    .icon {
-      font-size: 1.2rem;
-      margin-top: 0.25rem;
+    .calendar-day {
+      cursor: pointer;
+      transition: background 0.2s ease;
+    }
+    .calendar-day:hover {
+      background: #caf0f8;
     }
     .summary {
-      margin-top: 2rem;
       background: white;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    .summary h3 {
-      margin-top: 0;
       color: #0077b6;
+      border-radius: 12px;
+      padding: 1rem;
+      max-width: 420px;
+      margin: 0 auto 2rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
-    .modal {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.2);
-      display: none;
-      z-index: 1000;
-    }
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0,0,0,0.4);
-      display: none;
-      z-index: 999;
-    }
-    .modal select, .modal input {
-      display: block;
-      width: 100%;
-      margin-top: 1rem;
-      padding: 0.5rem;
+    .button {
       font-size: 1rem;
-    }
-    .modal button {
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background: #0077b6;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .exit-button {
-      display: block;
-      margin: 2rem auto 0;
       padding: 0.75rem 1.5rem;
-      background: #0077b6;
-      color: white;
-      font-size: 1rem;
+      background: white;
+      color: #0077b6;
       border: none;
-      border-radius: 8px;
+      border-radius: 12px;
       cursor: pointer;
-      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      margin: 1rem 0.5rem;
+    }
+    .month-controls {
+      margin-bottom: 2rem;
     }
   </style>
 </head>
 <body>
   <h1>Workout Calendar</h1>
+  <h2 id="monthHeader"></h2>
+
+  <div class="calendar" id="calendar-days-header"></div>
   <div class="calendar" id="calendar"></div>
 
-  <div class="summary" id="summary">
-    <h3>Monthly Summary</h3>
-    <p><strong>Swim</strong>: <span id="swimDistance">0</span> km, <span id="swimDuration">0</span> min, <strong>Pace</strong>: <span id="swimPace">–</span> min/km</p>
-    <p><strong>Run</strong>: <span id="runDistance">0</span> km, <span id="runDuration">0</span> min, <strong>Pace</strong>: <span id="runPace">–</span> min/km</p>
-    <p><strong>Bike</strong>: <span id="bikeDistance">0</span> km, <span id="bikeDuration">0</span> min, <strong>Pace</strong>: <span id="bikePace">–</span> min/km</p>
-    <p><strong>Weights</strong>: <span id="weightsCount">0</span> sessions</p>
+  <div class="month-controls">
+    <button class="button" onclick="changeMonth(-1)">⬅ Last Month</button>
+    <button class="button" onclick="changeMonth(1)">Next Month ➡</button>
   </div>
 
-  <button class="exit-button" onclick="window.location.href='index.html'">Exit to Main Menu</button>
+  <div class="summary" id="monthlySummary"></div>
 
-  <div class="overlay" id="overlay"></div>
-  <div class="modal" id="modal">
-    <h3 id="selectedDateTitle">Selected Date</h3>
-    <select id="workoutType">
-      <option value="">Select Workout</option>
-      <option value="Swim">Swim</option>
-      <option value="Run">Run</option>
-      <option value="Bike">Bike</option>
-      <option value="Weights">Weights</option>
-    </select>
-    <input type="number" id="distance" placeholder="Distance (km)" />
-    <input type="number" id="duration" placeholder="Duration (minutes)" />
-    <button onclick="saveWorkout()">Save</button>
-  </div>
+  <button class="button" onclick="location.href='index.html'">Exit to Main Menu</button>
 
   <script>
-    const calendar = document.getElementById('calendar');
-    const modal = document.getElementById('modal');
-    const overlay = document.getElementById('overlay');
-    const workoutType = document.getElementById('workoutType');
-    const distance = document.getElementById('distance');
-    const duration = document.getElementById('duration');
-    const selectedDateTitle = document.getElementById('selectedDateTitle');
-    let selectedDate = '';
+    const calendarDaysHeader = document.getElementById('calendar-days-header');
+    const daysOfWeek = ['M', 'T', 'W', 'T', 'F', 'S', 'S'];
+    daysOfWeek.forEach(day => {
+      const dayDiv = document.createElement('div');
+      dayDiv.className = 'calendar-header';
+      dayDiv.textContent = day;
+      calendarDaysHeader.appendChild(dayDiv);
+    });
 
-    function getIcon(type) {
-      switch (type) {
-        case 'Swim': return '🏊‍♂️';
-        case 'Run': return '🏃‍♂️';
-        case 'Bike': return '🚴‍♂️';
-        case 'Weights': return '🏋️‍♂️';
-        default: return '';
-      }
-    }
+    const monthNames = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+    let currentDate = new Date();
 
-    function calculatePace(duration, distance) {
-      return distance > 0 ? (duration / distance).toFixed(1) : '–';
+    function updateMonthHeader() {
+      document.getElementById('monthHeader').textContent = monthNames[currentDate.getMonth()] + ' ' + currentDate.getFullYear();
     }
 
     function generateCalendar() {
-      const today = new Date();
-      const year = today.getFullYear();
-      const month = today.getMonth();
-      const daysInMonth = new Date(year, month + 1, 0).getDate();
+      const calendar = document.getElementById('calendar');
+      const year = currentDate.getFullYear();
+      const month = currentDate.getMonth();
+      const firstDay = new Date(year, month, 1).getDay();
+      const lastDate = new Date(year, month + 1, 0).getDate();
+      const offset = firstDay === 0 ? 6 : firstDay - 1;
 
-      let totals = {
-        Swim: { distance: 0, duration: 0 },
-        Run: { distance: 0, duration: 0 },
-        Bike: { distance: 0, duration: 0 },
-        Weights: { count: 0 }
-      };
-
-      for (let i = 1; i <= daysInMonth; i++) {
-        const date = `${year}-${String(month+1).padStart(2,'0')}-${String(i).padStart(2,'0')}`;
-        const div = document.createElement('div');
-        div.className = 'day';
-        div.textContent = i;
-        div.onclick = () => openModal(date);
-
-        const saved = JSON.parse(localStorage.getItem(`workout-${date}`));
-        if (saved && saved.type) {
-          const icon = document.createElement('div');
-          icon.className = 'icon';
-          icon.textContent = getIcon(saved.type);
-          div.appendChild(icon);
-
-          if (saved.type === 'Weights') {
-            totals.Weights.count++;
-          } else {
-            totals[saved.type].distance += parseFloat(saved.distance || 0);
-            totals[saved.type].duration += parseFloat(saved.duration || 0);
-          }
-        }
-
-        calendar.appendChild(div);
+      calendar.innerHTML = '';
+      for (let i = 0; i < offset; i++) {
+        const emptyCell = document.createElement('div');
+        calendar.appendChild(emptyCell);
       }
-
-      document.getElementById('swimDistance').textContent = totals.Swim.distance.toFixed(1);
-      document.getElementById('swimDuration').textContent = totals.Swim.duration.toFixed(0);
-      document.getElementById('swimPace').textContent = calculatePace(totals.Swim.duration, totals.Swim.distance);
-      document.getElementById('runDistance').textContent = totals.Run.distance.toFixed(1);
-      document.getElementById('runDuration').textContent = totals.Run.duration.toFixed(0);
-      document.getElementById('runPace').textContent = calculatePace(totals.Run.duration, totals.Run.distance);
-      document.getElementById('bikeDistance').textContent = totals.Bike.distance.toFixed(1);
-      document.getElementById('bikeDuration').textContent = totals.Bike.duration.toFixed(0);
-      document.getElementById('bikePace').textContent = calculatePace(totals.Bike.duration, totals.Bike.distance);
-      document.getElementById('weightsCount').textContent = totals.Weights.count;
+      for (let day = 1; day <= lastDate; day++) {
+        const dayDiv = document.createElement('div');
+        dayDiv.className = 'calendar-day';
+        dayDiv.textContent = day;
+        dayDiv.onclick = () => alert(`Log your workout for ${day} ${monthNames[month]}`);
+        calendar.appendChild(dayDiv);
+      }
     }
 
-    function openModal(date) {
-      selectedDate = date;
-      selectedDateTitle.textContent = `Log workout for ${date}`;
-      const saved = JSON.parse(localStorage.getItem(`workout-${date}`));
-      workoutType.value = saved?.type || '';
-      distance.value = saved?.distance || '';
-      duration.value = saved?.duration || '';
-      modal.style.display = 'block';
-      overlay.style.display = 'block';
+    function changeMonth(delta) {
+      currentDate.setMonth(currentDate.getMonth() + delta);
+      updateMonthHeader();
+      generateCalendar();
     }
 
-    function saveWorkout() {
-      const data = {
-        type: workoutType.value,
-        distance: distance.value,
-        duration: duration.value
-      };
-      localStorage.setItem(`workout-${selectedDate}`, JSON.stringify(data));
-      location.reload();
-    }
-
-    function closeModal() {
-      modal.style.display = 'none';
-      overlay.style.display = 'none';
-    }
-
-    overlay.onclick = closeModal;
+    updateMonthHeader();
     generateCalendar();
   </script>
 </body>
