--- a/calendar.html
+++ b/calendar.html
@@ -34,11 +34,11 @@
       border-radius: 10px;
       padding: 0.75rem;
       font-weight: bold;
-      position: relative;
     }
     .calendar-day {
       cursor: pointer;
       transition: background 0.2s ease;
+      position: relative;
     }
     .calendar-day:hover {
       background: #caf0f8;
@@ -48,7 +48,7 @@
       background: #d0f0fd;
       font-weight: bold;
     }
-    .icon {
+    .emoji {
       position: absolute;
       bottom: 4px;
       right: 4px;
@@ -83,31 +83,39 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0,0,0,0.5);
       display: flex;
       justify-content: center;
       align-items: center;
+      z-index: 1000;
     }
     .modal-content {
       background: white;
       color: #0077b6;
-      padding: 2rem;
-      border-radius: 16px;
+      padding: 1.5rem;
+      border-radius: 12px;
+      max-width: 320px;
       width: 90%;
-      max-width: 400px;
       text-align: left;
     }
     .modal-content h3 {
       margin-top: 0;
     }
-    .modal-content label, .modal-content select, .modal-content input {
+    .modal-content label {
       display: block;
-      width: 100%;
-      margin-bottom: 1rem;
-      font-size: 1rem;
+      margin-top: 1rem;
     }
-    .modal-content button {
+    .modal-content input, .modal-content select {
       width: 100%;
+      padding: 0.5rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      margin-top: 0.25rem;
+    }
+    .modal-content .modal-buttons {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1.5rem;
     }
   </style>
 </head>
@@ -127,37 +135,39 @@
 
   <button class="button" onclick="location.href='index.html'">Exit to Main Menu</button>
 
-  <div id="modal" class="modal" style="display:none;">
+  <div id="modal" class="modal" style="display:none">
     <div class="modal-content">
-      <h3 id="selectedDateLabel">Log Workout</h3>
-      <label for="workoutType">Workout Type</label>
-      <select id="workoutType" onchange="toggleWorkoutFields()">
-        <option value="">Select</option>
-        <option value="run">Run</option>
-        <option value="bike">Bike</option>
-        <option value="swim">Swim</option>
-        <option value="weights">Weights</option>
-        <option value="hockey">Hockey</option>
+      <h3 id="modalDate"></h3>
+      <label for="workoutType">Workout Type:</label>
+      <select id="workoutType" onchange="toggleFields()">
+        <option value="">-- Select --</option>
+        <option value="run">🏃‍♂️ Run</option>
+        <option value="bike">🚴‍♂️ Bike</option>
+        <option value="swim">🏊‍♂️ Swim</option>
+        <option value="weights">🏋️‍♂️ Weights</option>
+        <option value="hockey">🏑 Hockey</option>
       </select>
 
-      <div id="distanceTimeFields">
-        <label for="distance">Distance (km)</label>
-        <input type="number" id="distance" placeholder="Distance">
-        <label for="duration">Time (minutes)</label>
-        <input type="number" id="duration" placeholder="Time">
+      <div id="distanceFields" style="display:none">
+        <label>Distance (km): <input type="number" id="distanceInput" min="0"></label>
+        <label>Time (min): <input type="number" id="timeInput" min="0"></label>
       </div>
 
-      <div id="weightsFields" style="display:none;">
-        <label for="weightsType">Workout Focus</label>
-        <select id="weightsType">
-          <option value="">Select</option>
-          <option value="push">Push</option>
-          <option value="pull">Pull</option>
-          <option value="legs">Legs</option>
-        </select>
+      <div id="weightsFields" style="display:none">
+        <label>Focus:
+          <select id="weightsFocus">
+            <option value="push">Push</option>
+            <option value="pull">Pull</option>
+            <option value="legs">Legs</option>
+          </select>
+        </label>
       </div>
 
-      <button class="button" onclick="saveWorkout()">Save Workout</button>
+      <div class="modal-buttons">
+        <button onclick="saveWorkout()">Save</button>
+        <button onclick="deleteWorkout()">Delete</button>
+        <button onclick="closeModal()">Cancel</button>
+      </div>
     </div>
   </div>
 
@@ -173,7 +183,7 @@
 
     const monthNames = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
     let currentDate = new Date();
-    let selectedDay = null;
+    let selectedDate = null;
 
     function updateMonthHeader() {
       document.getElementById('monthHeader').textContent = monthNames[currentDate.getMonth()] + ' ' + currentDate.getFullYear();
@@ -189,17 +199,20 @@
       const offset = firstDay === 0 ? 6 : firstDay - 1;
 
       calendar.innerHTML = '';
-      const stored = JSON.parse(localStorage.getItem('calendarWorkouts')) || [];
+      const workouts = JSON.parse(localStorage.getItem('calendarWorkouts')) || [];
 
       for (let i = 0; i < offset; i++) {
         const emptyCell = document.createElement('div');
         calendar.appendChild(emptyCell);
       }
+
       for (let day = 1; day <= lastDate; day++) {
+        const dateKey = `${year}-${month + 1}-${day}`;
+        const workout = workouts.find(w => w.date === dateKey);
+
         const dayDiv = document.createElement('div');
         dayDiv.className = 'calendar-day';
         dayDiv.textContent = day;
-
         if (
           today.getFullYear() === year &&
           today.getMonth() === month &&
@@ -207,23 +220,20 @@
         ) {
           dayDiv.classList.add('today');
         }
-
-        const dateStr = `${year}-${String(month + 1).padStart(2, '0')}-${String(day).padStart(2, '0')}`;
-        const entry = stored.find(e => e.date === dateStr);
-        if (entry) {
-          const icon = document.createElement('div');
-          icon.className = 'icon';
-          icon.textContent = {
+        if (workout) {
+          const emojiMap = {
             run: '🏃‍♂️',
             bike: '🚴‍♂️',
             swim: '🏊‍♂️',
             weights: '🏋️‍♂️',
             hockey: '🏑'
-          }[entry.type] || '✔';
-          dayDiv.appendChild(icon);
+          };
+          const emoji = document.createElement('div');
+          emoji.className = 'emoji';
+          emoji.textContent = emojiMap[workout.type];
+          dayDiv.appendChild(emoji);
         }
-
-        dayDiv.onclick = () => openModal(day);
+        dayDiv.onclick = () => openModal(dateKey, workout);
         calendar.appendChild(dayDiv);
       }
     }
@@ -234,49 +244,67 @@
       generateCalendar();
     }
 
-    function openModal(day) {
-      selectedDay = new Date(currentDate.getFullYear(), currentDate.getMonth(), day);
-      const month = currentDate.getMonth();
-      const year = currentDate.getFullYear();
-      document.getElementById('selectedDateLabel').textContent = `Log Workout for ${day} ${monthNames[month]}, ${year}`;
+    function openModal(dateKey, workout) {
+      selectedDate = dateKey;
+      document.getElementById('modalDate').textContent = `Workout for ${dateKey}`;
       document.getElementById('modal').style.display = 'flex';
+
+      if (workout) {
+        document.getElementById('workoutType').value = workout.type;
+        toggleFields();
+        document.getElementById('distanceInput').value = workout.distance || '';
+        document.getElementById('timeInput').value = workout.time || '';
+        document.getElementById('weightsFocus').value = workout.focus || 'push';
+      } else {
+        document.getElementById('workoutType').value = '';
+        document.getElementById('distanceInput').value = '';
+        document.getElementById('timeInput').value = '';
+        document.getElementById('weightsFocus').value = 'push';
+        toggleFields();
+      }
     }
 
-    function closeModal() {
-      document.getElementById('modal').style.display = 'none';
-      document.getElementById('workoutType').value = '';
-      document.getElementById('distance').value = '';
-      document.getElementById('duration').value = '';
-      document.getElementById('weightsType').value = '';
-    }
-
-    function toggleWorkoutFields() {
+    function toggleFields() {
       const type = document.getElementById('workoutType').value;
-      document.getElementById('distanceTimeFields').style.display = ['run','bike','swim'].includes(type) ? 'block' : 'none';
+      document.getElementById('distanceFields').style.display = ['run','bike','swim'].includes(type) ? 'block' : 'none';
       document.getElementById('weightsFields').style.display = type === 'weights' ? 'block' : 'none';
     }
 
     function saveWorkout() {
       const type = document.getElementById('workoutType').value;
-      const distance = document.getElementById('distance').value;
-      const duration = document.getElementById('duration').value;
-      const weightsType = document.getElementById('weightsType').value;
+      const distance = parseFloat(document.getElementById('distanceInput').value);
+      const time = parseFloat(document.getElementById('timeInput').value);
+      const focus = document.getElementById('weightsFocus').value;
 
-      const log = {
-        date: selectedDay.toISOString().split('T')[0],
-        type,
-        distance: ['run','bike','swim'].includes(type) ? distance : null,
-        duration: ['run','bike','swim'].includes(type) ? duration : null,
-        weightsFocus: type === 'weights' ? weightsType : null
-      };
+      const newWorkout = { date: selectedDate, type };
+      if (['run','bike','swim'].includes(type)) {
+        newWorkout.distance = distance;
+        newWorkout.time = time;
+      }
+      if (type === 'weights') {
+        newWorkout.focus = focus;
+      }
 
-      const existingLogs = JSON.parse(localStorage.getItem('calendarWorkouts')) || [];
-      existingLogs.push(log);
-      localStorage.setItem('calendarWorkouts', JSON.stringify(existingLogs));
+      const workouts = JSON.parse(localStorage.getItem('calendarWorkouts')) || [];
+      const updated = workouts.filter(w => w.date !== selectedDate);
+      updated.push(newWorkout);
+      localStorage.setItem('calendarWorkouts', JSON.stringify(updated));
 
       closeModal();
-      alert('Workout saved!');
       generateCalendar();
+    }
+
+    function deleteWorkout() {
+      const workouts = JSON.parse(localStorage.getItem('calendarWorkouts')) || [];
+      const updated = workouts.filter(w => w.date !== selectedDate);
+      localStorage.setItem('calendarWorkouts', JSON.stringify(updated));
+
+      closeModal();
+      generateCalendar();
+    }
+
+    function closeModal() {
+      document.getElementById('modal').style.display = 'none';
     }
 
     updateMonthHeader();
