--- a/index.html
+++ b/index.html
@@ -5,68 +5,75 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swim Tracker</title>
   <style>
+    @keyframes swim {
+      0% { transform: translateX(0) rotate(0deg); }
+      25% { transform: translateX(5px) rotate(-5deg); }
+      50% { transform: translateX(0) rotate(0deg); }
+      75% { transform: translateX(-5px) rotate(5deg); }
+      100% { transform: translateX(0) rotate(0deg); }
+    }
+
+    @keyframes wave {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-3px); }
+    }
+
     body {
-      margin: 0;
-      padding: 2rem;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       background: linear-gradient(to bottom right, #0077b6, #90e0ef);
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+      margin: 0;
+      padding: 2rem;
       text-align: center;
+      color: white;
+    }
+    .emoji {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
+      display: inline-block;
+      animation: swim 2s infinite ease-in-out;
+    }
+    .wave {
+      font-size: 2rem;
+      animation: wave 1.5s infinite ease-in-out;
+      display: inline-block;
     }
     h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
+      font-weight: bold;
       margin-bottom: 1rem;
     }
-    .button {
-      font-size: 1.2rem;
-      margin: 0.5rem;
-      padding: 1rem 2rem;
+    .button-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 1rem;
+      max-width: 300px;
+      margin: 2rem auto;
+    }
+    button {
+      font-size: 1rem;
+      padding: 1rem;
       background: white;
       color: #0077b6;
       border: none;
       border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
-    .countdown {
-      margin-top: 1rem;
-      font-size: 1.1rem;
+    button:hover {
+      background: #e0f7ff;
     }
   </style>
 </head>
 <body>
-  <h1><span style="color: red; font-weight: bold;">Ironman Dubai 70.3 2026</span></h1>
-  <h2>Welcome to Swim Tracker</h2>
+  <div class="emoji">🏊‍♂️</div> <div class="wave">🌊</div><div class="wave">🌊</div>
+  <h1>Welcome to Swim Tracker</h1>
 
-  <div class="countdown" id="countdown"></div>
-  <div class="countdown" id="weekNumber"></div>
-
-  <button class="button" onclick="location.href='workout-a.html'">Workout A (Pool)</button>
-  <button class="button" onclick="location.href='workout-b.html'">Workout B (Distance)</button>
-  <button class="button" onclick="location.href='progress-workout-a.html'">Progress A</button>
-  <button class="button" onclick="location.href='progress-workout-b.html'">Progress B</button>
-  <button class="button" onclick="location.href='calendar.html'">Logged Workouts</button>
-
-  <script>
-    function updateCountdown() {
-      const now = new Date();
-      const raceDate = new Date('2026-03-14');
-      const diff = raceDate - now;
-      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-      document.getElementById('countdown').textContent = `${days} days until race day!`;
-
-      const planStart = new Date('2025-06-23');
-      const msPerWeek = 1000 * 60 * 60 * 24 * 7;
-      const weekNumber = Math.max(1, Math.floor((now - planStart) / msPerWeek) + 1);
-      document.getElementById('weekNumber').textContent = `You are in week ${weekNumber} of your training plan.`;
-    }
-
-    updateCountdown();
-  </script>
+  <div class="button-grid">
+    <button onclick="location.href='workout-a.html'">Workout A (Pool)</button>
+    <button onclick="location.href='workout-b.html'">Workout B (Distance)</button>
+    <button onclick="location.href='progress-workout-a.html'">Progress Summary (Workout A)</button>
+    <button onclick="location.href='progress-workout-b.html'">Progress Summary (Workout B)</button>
+    <button onclick="location.href='calendar.html'">Logged Workouts</button>
+  </div>
 </body>
 </html>
